--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ethics-frontend/build
+          path: ./ethics-frontend/build
 
       - name: Deploy to GitHub Pages
         id: deployment
