--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,14 @@ jobs:
     if: github.ref == 'refs/heads/master'
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
       - name: Download artifact
         uses: actions/download-artifact@v4
-      
+        with:
+          name: production-files
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
