--- a/ethics-frontend/package.json
+++ b/ethics-frontend/package.json
@@ -40,5 +40,5 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
   },
-  "homepage": "https://hc-codes.github.io/Ethics-Management-Module/"
+  "homepage": "https://hc-codes.github.io/ethics-frontend/"
 }
